[package]
name = "starsource-comparer"
version = "1.0.0"
authors = ["Dennis Duda <git@seri.tools>", "Adam Heinermann"]
edition = '2021'

[dependencies]
clap = { version = "4", features = ["derive"] }
itertools = "0.13.0"
notify = "6"
num-traits = "0.2"
pdb-addr2line = "0.11.0"
regex = "1.10.4"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
zydis = "4.1.1"
